--- a/src/app/modules/author-nav/author-nav.component.scss
+++ b/src/app/modules/author-nav/author-nav.component.scss
@@ -27,6 +27,11 @@
     cursor: pointer;
     margin-right: 30px;
 }
+
+
+.kkfrnavse:hover { 
+    color: #A426D1;
+}
 .rrmessalign1{
     text-decoration: none; 
 }
@@ -54,14 +59,19 @@
 
 .ddis {  
     color: #0F0F0F;
-font-family: "League Spartan";
-font-size: 20px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
+    font-family: "League Spartan";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.ddis:hover{  
+ color: #A426D1;
 }
 .ddis:active{
     background-color:  #A426D1;
+    color : white;
     }
 
     
