--- a/src/app/modules/authprofile/authprofile.component.scss
+++ b/src/app/modules/authprofile/authprofile.component.scss
@@ -72,6 +72,11 @@ margin-top: 18px;
     background-color: #A426D1;
 }
 
+.circ1{ 
+    height: 18px;
+    width: 15px;
+}
+
 
 .line { 
     width: 3px;
