--- a/src/app/modules/freelancernav/freelancernav.component.scss
+++ b/src/app/modules/freelancernav/freelancernav.component.scss
@@ -252,6 +252,14 @@
            line-height: normal;
            padding: 4px 16px 4px 16px;
        }
+
+       .ddis:hover{  
+        color: #A426D1;
+       }
+       .kkfrnavse:hover { 
+        color: #A426D1;
+    }
+    
        .ddis:active{
            background-color: #A426D1;
        }
