--- a/src/app/modules/freeprofile/freeprofile.component.scss
+++ b/src/app/modules/freeprofile/freeprofile.component.scss
@@ -68,6 +68,14 @@ margin-top: 18px;
   
 }
 
+
+
+
+.circ1{ 
+    height: 18px;
+    width: 15px;
+}
+
 .pgrssbar { 
     background-color: #A426D1;
 }
