--- a/src/app/modules/profilesetting/profilesetting.component.html
+++ b/src/app/modules/profilesetting/profilesetting.component.html
@@ -1,7 +1,6 @@
 <div class="pcview">
   <app-freelancernav></app-freelancernav>
   <hr>
-  
   <div class="container">
     <div class="row">
       <div class="col-4 sidenav23">
@@ -9,7 +8,7 @@
         <button class="sidebtn" (click)="onButtonClick('button1')" [ngClass]="{'selected': selectedButton === 'button1'}"
           routerLink="/setting/billing-&-payment"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button1'}"></span>Billing & Payments</button><br>
         <button class="sidebtn" (click)="onButtonClick('button2')" [ngClass]="{'selected': selectedButton === 'button2'}"
-        routerLink="/setting/wallet"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button2'}"></span>Withdrawal</button><br>
+        routerLink="/setting/wallet"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button2'}"></span>Wallet</button><br>
           <!-- <button class="sidebtn" (click)="onButtonClick('button10')" [ngClass]="{'selected': selectedButton === 'button10'}"
           ><span class="clr" [ngClass]="{'clr1': selectedButton === 'button10'}"></span>Wallet</button><br> -->
         <p class="kksethd1" style="    margin-top: 50px;">User Settings</p>
