--- a/src/app/modules/accept-request/accept-request.component.html
+++ b/src/app/modules/accept-request/accept-request.component.html
@@ -66,78 +66,89 @@
     </div>
 
     <div *ngIf="GoNext === 'button2'">
-      <div class="container " style="margin-top: 50px;">
-        <div class="row deta">
-
+      <div class="container " style="margin-top: 50px;" *ngIf="Applies && Applies.length > 0">
+        <div class="row deta" *ngFor="let Apply of Applies;let i = index">
+          <div class="col-1">
+            <!-- <div class="elli"> -->
+              <div class="kkprimg" *ngIf="Apply.applideUserProfile">
+                <img src="{{imageUrl + Apply.applideUserProfile }}" class=" kkprimg img-responsive">
+            </div>
+            <div class="kkprimg" *ngIf="!Apply.applideUserProfile">
+                <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
+            </div>
+            
+            <!-- </div> -->
+           
+          </div>
+          <div class="col-5">
+            <p class="fname">{{Apply.userEmail}}</p>
+            <p class="fsub">{{Apply.skillSet}}</p>
+            <!-- <div class="fsub">4 years expierience <span style="margin-left: 26px;" class="fsub">12 jobs
+                            completed</span></div> -->
+          </div>
+          <div class="col-2"></div>
+          <div class="col-3">
+            <p class="bid">Bidding rate : <span class="rate">${{Apply.biddingRate}}/ hour</span></p>
+            <button class="msg">Message</button><button class="hire" data-bs-toggle="modal" data-bs-target="#hireModal"
+              (click)="ApplyModal(Apply)">Hire</button>
+            <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Apply)">View
+              Cover Letter <img src="../assets/Vector 26.png" alt="Welcome Pubkin"> </p>
+          </div>
+          <div class="col-1">
             <div class="col-1">
-                <div class="elli"></div>
-            </div>
-            <div class="col-5">
+              <img class="sho1" (click)="showicon(i)" src="../assets/show more.png" alt="">
+              <div class="EDITDEL"  *ngIf="showicons[i]">
 
-                <p class="fname">{{Applies.userEmail}}</p>
-
-                <p class="fsub">{{Applies.skillSet}}</p>
-                <!-- <div class="fsub">4 years expierience <span style="margin-left: 26px;" class="fsub">12 jobs
-                        completed</span></div> -->
+                <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
+                <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
+              </div>'
             </div>
-            <div class="col-2"></div>
-            <div class="col-3">
-                <p class="bid">Bidding rate : <span class="rate">${{Applies.biddingRate}}/ hour</span></p>
-                <button class="msg">Message</button><button  class="hire" data-bs-toggle="modal"
-                    data-bs-target="#hireModal" (click)="ApplyModal(Applies)">Hire</button>
-                <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Applies)">View
-                    Cover Letter <img src="../assets/Vector 26.png" alt="Welcome Pubkin"> </p>
-            </div>
-            <div class="col-1">
-               <div class="col-1">
-                <img class="sho1"  (click)="thirumpivvaa()"  src="../assets/show more.png" alt="">
-                <div class="EDITDEL" *ngIf="maranchupo">
-          
-                  <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
-                  <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
-      </div>'
-            </div>
+          </div>
         </div>
-    </div>
-</div>
       </div>
-</div>
+      </div>
 
 <div *ngIf="GoNext === 'button3'">
-  <div class="container " style="margin-top: 50px;">
-        <div class="row deta">
-
-            <div class="col-1">
-                <div class="elli"></div>
-            </div>
-            <div class="col-5">
-
-                <p class="fname">{{Applies.userEmail}}</p>
-
-                <p class="fsub">{{Applies.skillSet}}</p>
-                <!-- <div class="fsub">4 years expierience <span style="margin-left: 26px;" class="fsub">12 jobs
-                        completed</span></div> -->
-            </div>
-            <div class="col-2"></div>
-            <div class="col-3">
-                <p class="bid">Bidding rate : <span class="rate">${{Applies.biddingRate}}/ hour</span></p>
-                <button class="msg">Message</button><button  class="hire" data-bs-toggle="modal"
-                    data-bs-target="#hireModal" (click)="ApplyModal(Applies)">Hire</button>
-                <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Applies)">View
-                    Cover Letter <img src="../assets/Vector 26.png" alt="Welcome Pubkin"> </p>
-            </div>
-            <div class="col-1">
-               <div class="col-1">
-                <img class="sho1"  (click)="thirumpivvaa()"  src="../assets/show more.png" alt="">
-                <div class="EDITDEL" *ngIf="maranchupo">
-          
-                  <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
-                  <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
-      </div>'
-            </div>
+  <div class="container " style="margin-top: 50px;" *ngIf="Applies && Applies.length > 0">
+    <div class="row deta" *ngFor="let Apply of Applies;let i = index">
+      <div class="col-1">
+        <!-- <div class="elli"> -->
+          <div class="kkprimg" *ngIf="Apply.applideUserProfile">
+            <img src="{{imageUrl + Apply.applideUserProfile }}" class=" kkprimg img-responsive">
         </div>
+        <div class="kkprimg" *ngIf="!Apply.applideUserProfile">
+            <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
+        </div>
+        
+        <!-- </div> -->
+       
+      </div>
+      <div class="col-5">
+        <p class="fname">{{Apply.userEmail}}</p>
+        <p class="fsub">{{Apply.skillSet}}</p>
+        <!-- <div class="fsub">4 years expierience <span style="margin-left: 26px;" class="fsub">12 jobs
+                        completed</span></div> -->
+      </div>
+      <div class="col-2"></div>
+      <div class="col-3">
+        <p class="bid">Bidding rate : <span class="rate">${{Apply.biddingRate}}/ hour</span></p>
+        <button class="msg">Message</button><button class="hire" data-bs-toggle="modal" data-bs-target="#hireModal"
+          (click)="ApplyModal(Apply)">Hire</button>
+        <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Apply)">View
+          Cover Letter <img src="../assets/Vector 26.png" alt="Welcome Pubkin"> </p>
+      </div>
+      <div class="col-1">
+        <div class="col-1">
+          <img class="sho1" (click)="showicon(i)" src="../assets/show more.png" alt="">
+          <div class="EDITDEL"  *ngIf="showicons[i]">
+
+            <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2">
+            <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
+          </div>'
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 </div>
 <div class="modal fade" id="deletmodel2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
@@ -414,12 +425,12 @@
                 Only Numeric are allowed
               </span>
             </span>
-            <div class="container kkreadiobil">
+            <!-- <div class="container kkreadiobil">
               <input class="form-check-input kkrdbtn1" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label kkrdttx1" for="flexRadioDefault1">
                 Make Default Payment
               </label>
-            </div>
+            </div> -->
             <div class="kkbiladcd">
               <button class="btn kkbiladcd1" type="submit" [disabled]="bankDetailsform.invalid">Add Card</button>
             </div>
