--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -5,7 +5,8 @@
       </div>
       <div class="col-5">
         <div class="rrheadalign1">
-          <div class="dropdown">
+          <a class="kkfrnavse rrmessalign1" routerLink="/post-a-job">Post a Job</a>
+          <!-- <div class="dropdown">
             <button class="btn kkfrnavse dropdown-toggle " type="button" id="dropdownMenuButton1"
               data-bs-toggle="dropdown" aria-expanded="false">
               Jobs
@@ -16,17 +17,17 @@
               <li><a class="dropdown-item ddis" routerLink="/authors/on-going-jobs">Ongoing Job</a></li><br>
               <li><a class="dropdown-item ddis">Completed Job</a></li><br>
             </ul>
-          </div>
+          </div> -->
           <div class="dropdown">
             <button class="btn kkfrnavse dropdown-toggle " type="button" id="dropdownMenuButton1"
               data-bs-toggle="dropdown" aria-expanded="false">
-              My Jobs
+              Jobs
             </button>
             <ul class="dropdown-menu listd" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item ddis">Post a New Job</a></li><br>
-              <li><a class="dropdown-item ddis" routerLink="/authors/accept-a-request">Job Postings</a></li><br>
-              <li><a class="dropdown-item ddis">Contracts</a></li><br>
-              <li><a class="dropdown-item ddis">Project Dashboard</a></li><br>
+              <!-- <li><a class="dropdown-item ddis">Post a New Job</a></li><br> -->
+              <li><a class="dropdown-item ddis" routerLink="/authors/accept-a-request" >My Jobs</a></li><br>
+              <li><a class="dropdown-item ddis"  routerLink="/authors/on-going-jobs">Ongoing Jobs</a></li><br>
+              <li><a class="dropdown-item ddis">Completed Jobs</a></li><br>
             </ul>
           </div>
           <div class="dropdown">
@@ -35,13 +36,11 @@
               Reports
             </button>
             <ul class="dropdown-menu listd" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item ddis">Post a New Job</a></li><br>
-              <li><a class="dropdown-item ddis" routerLink="/authors/accept-a-request">Job Postings</a></li><br>
-              <li><a class="dropdown-item ddis">Contracts</a></li><br>
+              <li><a class="dropdown-item ddis">Transactions</a></li><br>
               <li><a class="dropdown-item ddis">Project Dashboard</a></li><br>
             </ul>
           </div>
-          <!-- <a class="kkfrnavse rrmessalign1">Message</a> -->
+          <a class="kkfrnavse rrmessalign1">Wallet</a>
         </div>
       </div>
       <div class="col-3">
@@ -70,15 +69,15 @@
         <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
     </div>
         <div class="kkpname">
-            <p class="kkprname">{{User[0].firstName}}</p>
+            <p class="kkprname">{{User[0].firstName}} <img  *ngIf="calculateTotal() === 100" src="../assets/Verified Check_.png" alt="pubkins" style="margin-top: -6px;"> </p>
             <p class="kkprname1">Author</p>
             <p class="kkprbtn1" routerLink="/setting/wallet"><span class="material-symbols-outlined">
               account_balance_wallet
               </span>Wallet</p>
               <p class="kkprbtn1" routerLink="/setting/billing-&-payment"><span class="material-symbols-outlined">
                 settings
-                </span>Settings</p>
-            <button type="button"class="btn kkprbtn2" routerLink="/home">Logout <span class="material-symbols-outlined">
+                </span>Setting</p>
+            <button type="button"class="btn kkprbtn2" (click)="logout()">Logout <span class="material-symbols-outlined">
                 logout
                 </span></button>
         </div>
