--- a/src/app/modules/job-post/job-post.component.html
+++ b/src/app/modules/job-post/job-post.component.html
@@ -12,13 +12,14 @@
         [(ngModel)]="jobservice.jobData.skillSet" />
     <input type="hidden" [(ngModel)]="selectedOption" [value]="selectedOption" required name="complexity"
         #complexity="ngModel" [(ngModel)]="jobservice.jobData.complexity">
-    <input type="hidden" id="projectStartDate" name="projectStartDate" [(ngModel)]="jobservice.jobData.projectStartDate">
-    <input type="hidden" ngModel [value]="jobservice.jobData.projectEndDate" name="projectEndDate" #projectEndDate="ngModel"
-        [(ngModel)]="jobservice.jobData.projectEndDate">
+    <input type="hidden" id="projectStartDate" name="projectStartDate"
+        [(ngModel)]="jobservice.jobData.projectStartDate">
+    <input type="hidden" ngModel [value]="jobservice.jobData.projectEndDate" name="projectEndDate"
+        #projectEndDate="ngModel" [(ngModel)]="jobservice.jobData.projectEndDate">
     <input type="hidden" [(ngModel)]="skillset" [value]="skillset" name="experience" #experience="ngModel"
         [(ngModel)]="jobservice.jobData.experience">
-    <input type="hidden" name="durationOfProject" [value]="jobservice.jobData.durationOfProject" #durationOfProject="ngModel"
-        [(ngModel)]="jobservice.jobData.durationOfProject">
+    <input type="hidden" name="durationOfProject" [value]="jobservice.jobData.durationOfProject"
+        #durationOfProject="ngModel" [(ngModel)]="jobservice.jobData.durationOfProject">
     <input type="hidden" name="fromBudget" [value]="jobservice.jobData.fromBudget" #fromBudget="ngModel"
         [(ngModel)]="jobservice.jobData.fromBudget">
     <input type="hidden" name="currency" [value]="jobservice.jobData.currency" #currency="ngModel"
@@ -31,7 +32,7 @@
         [(ngModel)]="jobservice.jobData.jobTitle">
     <input type="hidden" name="description" [value]="jobservice.jobData.description" #description="ngModel"
         [(ngModel)]="jobservice.jobData.description">
-        <input type="hidden" id="status" name="status" [(ngModel)]="jobservice.jobData.status">
+    <input type="hidden" id="status" name="status" [(ngModel)]="jobservice.jobData.status">
     <input type="hidden" id="attachUrl" name="attachUrl" [(ngModel)]="jobservice.jobData.attachUrl">
     <input type="hidden" id="attachFile" name="attachFile" [(ngModel)]="jobservice.jobData.attachFile">
     <input type="hidden" id="fileName" name="fileName" [(ngModel)]="jobservice.jobData.fileName">
@@ -109,7 +110,7 @@
         <div class="container">
             <p class="cat"> 2/5,Skills</p>
             <p class="head">Please select the skill you’re looking for </p>
-            <input class="search" placeholder="Search for skills">
+            <!-- <input class="search" placeholder="Search for skills"> -->
             <div class="row mt-4">
                 <div class="col-3 mt-4" *ngFor="let selectedSkill of selectedSkills; let i = index">
                     <div class="addsk1" (click)="removeSkill(i)">
@@ -124,7 +125,7 @@
                 </div>
             </div>
 
-            <p class="pop">popular skill for template designer</p>
+            <p class="pop">Popular Skills</p>
             <div class="row">
                 <div class="col-3 mt-4" *ngFor="let skill of skills; let i = index">
                     <div class="addsk" (click)="addSkill(skill)">
@@ -237,7 +238,8 @@
                 class="fr">&nbsp;&nbsp;&nbsp;to&nbsp;&nbsp;&nbsp;</span><input type="text" class="dur" ngModel
                 name="projectEndDate" #projectEndDate="ngModel" [(ngModel)]="jobservice.jobData.projectEndDate">
             <select required class="kkin1" style="margin-left: 24px;" placeholder="eg: Compositor" ngModel
-                name="durationOfProject" #durationOfProject="ngModel" [(ngModel)]="jobservice.jobData.durationOfProject">
+                name="durationOfProject" #durationOfProject="ngModel"
+                [(ngModel)]="jobservice.jobData.durationOfProject">
                 <option class="kkin1">Months</option>
                 <option class="kkin1">Weeks</option>
                 <option class="kkin1">Days</option>
@@ -357,8 +359,8 @@
         <p class="att">Add Attachment related to project (Optional)</p>
         <label class="up">
             <!-- <input  class="d-none" type="file" (change)="onFileSelected($event)"/> -->
-            <input #fileInput type="file" class="d-none" id="attachfile" name="attachfile" (change)="onFileSelected($event)"
-                required>
+            <input #fileInput type="file" class="d-none" id="attachfile" name="attachfile"
+                (change)="onFileSelected($event)" required>
             <span *ngIf="!uploadedFileName"> Drag or&nbsp;</span> <span class="up1">{{ uploadedFileName ?
                 uploadedFileName : 'upload' }}</span> <span *ngIf="!uploadedFileName">&nbsp;here</span>
         </label>
@@ -476,7 +478,6 @@
 
 </div>
 
-
 <div *ngIf="GoNext === 'button6'">
     <div class="container mt-3">
         <div class="row">
@@ -544,8 +545,19 @@
                                 <path
                                     d="M5.98008 18.0001C4.84113 18.0001 3.87571 17.2175 3.54199 16.1348C3.77906 16.1778 4.02279 16.2002 4.27149 16.2002H18.3673C20.4904 16.2002 22.2117 14.3869 22.2117 12.1502V3.75391C23.2071 4.12456 23.9202 5.12466 23.9202 6.30025V12.1502C23.9202 15.381 21.4341 18.0001 18.3673 18.0001H5.98008Z"
                                     fill="#A426D1" />
-                            </svg><span
-                                class="ratereviewjob">{{jobservice.jobData.fromBudget}}-{{jobservice.jobData.toBudget}}/{{jobservice.jobData.rateBasis}}</span>
+                            </svg>
+                        
+                            <span
+                                class="ratereviewjob">
+                                <span *ngIf="jobservice.jobData.currency === 'INR'">₹</span>
+                                <span *ngIf="jobservice.jobData.currency === 'USD'">$</span>
+                                <span *ngIf="jobservice.jobData.currency === 'AED'">د.إ</span>
+                                <span *ngIf="jobservice.jobData.currency === 'ANG'">ƒ</span>
+                                <span *ngIf="jobservice.jobData.currency === 'AOA'">Kz</span>
+                                <span *ngIf="jobservice.jobData.currency === 'ARS  '">$</span>
+                                <span *ngIf="jobservice.jobData.currency === 'OMR'">ر.ع.</span>
+                                <span *ngIf="jobservice.jobData.currency === 'SAR'">.س</span>
+                                {{jobservice.jobData.fromBudget}}-{{jobservice.jobData.toBudget}}/{{jobservice.jobData.rateBasis}}</span>
                         </div>
                     </div>
                     <hr class="mt-3">
@@ -580,7 +592,7 @@
             <div class="col-5">
                 <button class="next" (click)="goodbye();" routerLink="/authors">Post a Job</button>
             </div>
-            <div class="col-1"> 
+            <div class="col-1">
             </div>
         </div>
     </div>
