--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -119,7 +119,7 @@
 </div>
 
             <div style="    width: 99%;margin-top: 18px;">
-                <mat-checkbox class="example-margin check123"></mat-checkbox>
+                <mat-checkbox class="example-margin check123" name="myCheckbox" ngModel required></mat-checkbox>
                 <span class="meme meme2">I have
                     read and accept pubkin’s</span> <span class="log log2" data-bs-toggle="modal"
                     data-bs-target="#myModal">User Agreement
@@ -478,7 +478,6 @@
 
             <!-- Modal footer -->
             <div class="modal-footer">
-                <mat-checkbox type="checkbox" id="checked" [(ngModel)]="checkbox2" (change)="toggleCheckboxes()" class="example-margin check123"></mat-checkbox>
                 <button type="button" style="    width: 100px;
         height: 50px;" class="btn btnfr" data-bs-dismiss="modal">Agree</button>
             </div>
@@ -486,7 +485,6 @@
         </div>
     </div>
 </div>
-   <!-- <mat-checkbox class="example-margin check123" type="checkbox"[(ngModel)]="checkbox1"   [disabled]="!checkbox2" (change)="toggleCheckboxes()"></mat-checkbox> -->
 
 
 
